# EchoControlSDK

./: CMakeLists.txt  CMakeSettings.json
EchoControlSDK/: CMakeLists.txt  EchoControlSDK.cpp
EchoControlSDK/include/: EchoControlCode.h  EchoControlSDK.h
EchoControlSDK/src/: EchoControlCode.h  EchoControlSDK.cpp  EchoControlSDK.h  Version.h  global.h  main.cpp  types.h
EchoControlSDK/src/config/: ConfigManager.cpp  ConfigManager.h  PropertyManager.hpp
EchoControlSDK/src/debug/: Exceptions.cpp  Exceptions.h  Logger.cpp  Logger.h  str_error.cpp  str_error.h
EchoControlSDK/src/device/: Device.hpp  DeviceBase.cpp  DeviceBase.h  DeviceDataTypes.h  DeviceEvents.h  DeviceFactory.h  DeviceID.cpp  DeviceID.h  DeviceRegister.cpp  DeviceState.h  IDevice.h
EchoControlSDK/src/device/Light/: ILight_Device.h
EchoControlSDK/src/device/Light/Light_HL_525_4W/: Light_HL_525_4W.cpp  Light_HL_525_4W.h
EchoControlSDK/src/device/PTZ/: IPTZ_Device.h
EchoControlSDK/src/device/PTZ/PTZ_YZ_BY010W/: PTZ_YZ_BY010W.cpp  PTZ_YZ_BY010W.h
EchoControlSDK/src/device/Sound/: ISound_Device.h
EchoControlSDK/src/device/Sound/Sound_NetSpeaker_V2/: Sound_NetSpeaker_V2.cpp  Sound_NetSpeaker_V2.h
EchoControlSDK/src/device/Ultrasonic/: IUltrasonic_Device.h
EchoControlSDK/src/device/Ultrasonic/Ultrasonic_TAS_IO_428R2/: Ultrasonic_TAS_IO_428R2.cpp  Ultrasonic_TAS_IO_428R2.h
EchoControlSDK/src/handler/: EchoControlHandler.cpp  EchoControlHandler.h
EchoControlSDK/src/net/: Sal_Socket.cpp  Sal_Socket.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
EchoControlSDK/src/protocol/: PacketTemplate.hpp  Packet_Def.cpp  Packet_Def.h  Packet_ID.h  RpcPacket.h
EchoControlSDK/src/src/: EchoControlSDK.cpp
EchoControlSDK/src/src/config/: ConfigManager.cpp
EchoControlSDK/src/src/debug/: Exceptions.cpp  Exceptions.h
EchoControlSDK/src/src/device/: DeviceFactory.h  DeviceRegister.cpp
EchoControlSDK/src/src/device/Light/: ILight_Device.h
EchoControlSDK/src/src/device/Light/Light_HL_525_4W/: Light_HL_525_4W.h
EchoControlSDK/src/src/device/PTZ/PTZ_YZ_BY010W/: PTZ_YZ_BY010W.h
EchoControlSDK/src/src/net/: Sal_Socket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
EchoControlSDK/src/src/protocol/: PacketTemplate.hpp
EchoControlSDK/src/src/thread/: event_queue.cpp  event_queue.h  process_singleton.cpp  thread.cpp  thread.h
EchoControlSDK/src/src/time/: sal_chrono.h  time_convert.h
EchoControlSDK/src/src/utils/: buffer.cpp  configparser.cpp  configparser.h  crc.cpp  crc.h  crc.hpp  file_system.h  singleton.hpp  utils.cpp  utils.h
EchoControlSDK/src/thread/: event_queue.cpp  event_queue.h  process_singleton.cpp  process_singleton.h  sal_thread.h  semaphore.cpp  semaphore.h  thread.cpp  thread.h
EchoControlSDK/src/time/: elapsed_timer.cpp  elapsed_timer.h  sal_chrono.h  time_convert.cpp  time_convert.h  time_utils.cpp  time_utils.h
EchoControlSDK/src/utils/: buffer.cpp  buffer.h  configparser.cpp  configparser.h  crc.cpp  crc.h  crc.hpp  create_map.hpp  factory.hpp  file_system.cpp  file_system.h  projection.cpp  projection.h  ring_buffer.cpp  ring_buffer.h  singleton.hpp  utils.cpp  utils.h
EchoControlSDK/test/: main.cpp
EchoControlSDK/tool/: ConfigTool.cpp
